# stock-ai-agent-aws

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py
.claude/skills/explain/: SKILL.md
docs/: CODEBASE_GUIDE.md
infrastructure/: template.yaml
lambda/: handler.py
src/stock_agent/: __init__.py  agent.py  config.py
src/stock_agent/tools/: __init__.py  analysis_tools.py  sector_tools.py  stock_tools.py
tests/: conftest.py  test_tools.py
